[package]
name = "api"
version = "0.1.0"
authors = ["John-Craig Borman <borman.johncraig@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.26"
derive-getters = "0.3.0"
futures = "0.3"
itertools = "0.10"
log = "0.4.20"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.4"
